--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,21 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.2.15</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <packaging>jar</packaging>
 
